hw_1/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-check-app-deployment
  labels:
    app: health-check-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-check-app
  template:
    metadata:
      labels:
        app: health-check-app
    spec:
      containers:
      - name: health-check-app
        image: aartman/chernyshev_arch_homework
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
