hw_1/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-check-service
spec:
  selector:
    app: health-check-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
