hw_1/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-check-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite "(?i)/otusapp/chernyshev/(.*)$" /$1 break;
      rewrite "(?i)/$" / break;
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: health-check-service
            port:
              number: 80
